[tool.poetry]
name = "DemetriusStorm_brain_games"
version = "0.9.4"
description = "The package contains simple math games"
authors = ["Dmitriy Bulygin <demetrius.storm@gmail.com>"]
repository = "https://github.com/DemetriusStorm/python-project-lvl1"
classifiers = [
	'Environment :: Console',
	'Intended Audience :: End Users/Desktop',
	'Intended Audience :: Developers',
	'Intended Audience :: System Administrators',
	'License :: OSI Approved :: Python Software Foundation License',
	'Operating System :: MacOS :: MacOS X',
	'Operating System :: Microsoft :: Windows',
	'Operating System :: POSIX',
	'Programming Language :: Python',
	'Development Status :: 5 - Production/Stable',
	'Intended Audience :: Education'
	'Topic :: Games/Entertainment :: Puzzle Games',
]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api" 
